--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -13,7 +13,8 @@
   background-color: #333;
   color: white;
   height: 200px;
-  padding: 50px 20px;
+  padding: 20px 0px;
+  margin: 0;
   fa-icon {
     display: inline-block;
     width: 30px;
