--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,79 @@
-<p>
-  home works!
-</p>
+<div class="container">
+  <h1 class="border-left">
+    <a name="intro"></a>{{ "NAV-INTRO" | translate }}</h1>
+  <div class="row intro">
+    <div class="col">
+      <p>
+        <b>浙江瑞宏塑胶有限公司</b
+        >总部位于----浙江天台，注册资金1000万元，是一家专业生产PVB树脂粉到PVB玻璃中间膜的有限责任公司。公司成立就设两个生产基地，温州化工区为PVB树脂粉生产基地，天台为PVB中间膜生产基地。公司引进国外EDI公司和思恳德公司先进设备，具有全面的质量监控和自我检测系统。
+        公司现有员工520人，其中专业技术人员占18%。温州树脂粉生产基地具有成熟的PVB树脂生产工艺，年产能力12000吨；<br/>
+        天台PVB胶片生产基地拥有3条先进的PVB胶片生产线，生产车间全部为恒温、恒湿、无尘的净化车间，PVB中间膜年产能力10000吨，并具备生产3.3米宽及1.52MM厚的各种规格PVB胶片的能力。(点击查看全文)
+      </p>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <h1 class="border-left">
+    <a name="news"></a>{{ "NAV-NEWS" | translate }}
+  </h1>
+  <div class="row">
+    <table class="table table-hover">
+      <tbody>
+        <tr *ngFor="let item of news; let i = index">
+          <th scope="row"></th>
+          <td class="text-left">
+            <a href="{{ item.url }}">{{ item.title }}</a>
+          </td>
+          <td class="text-right">{{ item.date }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+<div class="container">
+  <h1 class="border-left">
+    <a name="production"></a>{{ "NAV-PRODUCTS" | translate }}
+  </h1>
+  <div id="carouselPRODUCTS" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselPRODUCTS" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselPRODUCTS" data-slide-to="1"></li>
+      <li data-target="#carouselPRODUCTS" data-slide-to="2"></li>
+      <li data-target="#carouselPRODUCTS" data-slide-to="3"></li>
+      <li data-target="#carouselPRODUCTS" data-slide-to="4"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div
+        class="carousel-item production-item"
+        *ngFor="let item of productions; let i = index"
+        [ngClass]="{ active: i == 0 }"
+      >
+        <img class="d-block w-100" src="{{ item.image }}"/>
+        <div class="carousel-caption d-none d-md-block">
+          <h5>{{ item.title | translate }}</h5>
+          <p>{{ item.intro | translate }}</p>
+          <h5>{{ item.state | translate }}</h5>
+        </div>
+      </div>
+    </div>
+    <a
+      class="carousel-control-prev"
+      href="#carouselPRODUCTS"
+      role="button"
+      data-slide="prev"
+    >
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a
+      class="carousel-control-next"
+      href="#carouselPRODUCTS"
+      role="button"
+      data-slide="next"
+    >
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
