--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -1,3 +1,46 @@
-<p>
-  intro works!
-</p>
+<div class="container">
+  <h1 class="border-left">
+    <a name="info"></a>{{ "NAV-INFO" | translate }}</h1>
+  <div class="row info">
+    <div class="col-12">
+      <table class="table table-borderless">
+        <caption>浙江金亿龙泵业有限公司</caption>
+        <tbody>
+          <tr>
+            <th scope="row">企业法人：</th>
+            <td>潘华志</td>
+          </tr>
+          <tr>
+            <th scope="row">所在地：</th>
+            <td>浙江 台州</td>
+          </tr>
+          <tr>
+            <th scope="row">企业类型：</th>
+            <td>私营股份有限公司</td>
+          </tr>
+          <tr>
+            <th scope="row">成立时间：</th>
+            <td>2001-05-08</td>
+          </tr>
+          <tr>
+            <th scope="row">主营行业：</th>
+            <td>排污泵</td>
+          </tr>
+          <tr>
+            <th scope="row">主营产品：</th>
+            <td>    潜水排污泵,管道泵,增压泵,喷射泵
+</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <h1 class="border-left">
+    <a name="info"></a>{{ "NAV-INTRO" | translate }}</h1>
+  <div class="row info">
+    <div class="col-12"></div>
+  </div>
+</div>
