--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -30,6 +30,29 @@
   font-weight: bolder;
 }
 
+h1 {
+  border-width: 10px !important;
+  border-color: #dc3545 !important;
+  margin-left: 16px;
+  padding-left: 10px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  color: #999;
+}
+
+.simple-introduction {
+  position: relative;
+  h2 {
+    text-align: center;
+    color: #dc3545;
+  }
+  img {
+    width: 100%;
+    // height: 300px;
+  }
+}
+
+
 .navbar-real {
   background-color: #333;
   padding-left: 1rem;
