--- a/src/app/intro/intro.component.scss
+++ b/src/app/intro/intro.component.scss
@@ -1,12 +1,5 @@
-h1 {
-  border-width: 10px !important;
-  border-color: #dc3545 !important;
-  margin-left: 16px;
-  padding-left: 10px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  color: #999;
-}
+@import "../column.scss";
+
 
 caption {
   caption-side: initial;;
