--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,3 +1,18 @@
-<p>
-  contact works!
-</p>
+<div class="container">
+  <h1 class="border-left">
+    <a name="info"></a>{{ "NAV-CONTACT" | translate }}</h1>
+  <div class="row info">
+    <div class="col-12">
+    电        话： 86 0576 83882759 
+
+传        真： 86 0576 83989636
+
+地        址： 中国 浙江 天台县福溪街道下王邱村
+
+邮        编： 317200 
+
+邮        箱： f759@263.net pvb@pvbfilm.com
+
+公 司  主 页： http://www.pvbfilm.com
+  </div>
+</div>
