--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,43 +1,32 @@
 <app-header></app-header>
 <div class="container">
-
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="collapse navbar-collapse nav-right" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto"></ul>
       <ul class="navbar-nav">
-        <li class="nav-item active">
+        <li class="nav-item" [ngClass]="{'active': url === 'home'}">
           <a class="nav-link btn-lg" href=""
             >{{ "NAV-HOME" | translate }}
             <span class="sr-only">(current)</span></a
           >
         </li>
-        <li class="nav-item">
-          <a class="nav-link btn-lg" href="#intro">{{
+        <li class="nav-item" [ngClass]="{'active': url === 'intro'}">
+          <a class="nav-link btn-lg" href="/intro">{{
             "NAV-INTRO" | translate
           }}</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link btn-lg" href="#news">{{
+        <li class="nav-item" [ngClass]="{'active': url === 'news'}">
+          <a class="nav-link btn-lg" href="/news">{{
             "NAV-NEWS" | translate
           }}</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link btn-lg" href="#production">{{
+        <li class="nav-item" [ngClass]="{'active': url === 'product'}">
+          <a class="nav-link btn-lg" href="/product">{{
             "NAV-PRODUCTS" | translate
           }}</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link btn-lg" href="#wallet">{{
-            "NAV-WALLET" | translate
-          }}</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link btn-lg" href="#mining">{{
-            "NAV-MINING" | translate
-          }}</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link btn-lg" href="#contact">{{
+        <li class="nav-item" [ngClass]="{'active': url === 'contact'}">
+          <a class="nav-link btn-lg" href="/contact">{{
             "NAV-CONTACT" | translate
           }}</a>
         </li>
@@ -51,7 +40,7 @@
     </div>
     <div class="intro">
       <h1 class="display-4">{{ "WELCOME" | translate }}</h1>
-      <hr class="my-4"/>
+      <hr class="my-4" />
       <div class="container">
         <div class="row">
           <div class="col">
