--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -9,11 +9,9 @@
 
 .about {
   text-align: center;
-  // background-image: url("/assets/images/global.jpg");
   background-color: #333;
   color: white;
-  height: 200px;
-  padding: 20px 0px;
+  padding: 20px 0px 0px 0px;
   margin: 0;
   fa-icon {
     display: inline-block;
