--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,6 +25,11 @@
             "NAV-PRODUCTS" | translate
           }}</a>
         </li>
+        <li class="nav-item" [ngClass]="{'active': url === 'certificate'}">
+          <a class="nav-link btn-lg" href="/certificate">{{
+            "NAV-CERTIFICATE" | translate
+          }}</a>
+        </li>
         <li class="nav-item" [ngClass]="{'active': url === 'contact'}">
           <a class="nav-link btn-lg" href="/contact">{{
             "NAV-CONTACT" | translate
