--- a/src/app/floating-bar/floating-bar.component.scss
+++ b/src/app/floating-bar/floating-bar.component.scss
@@ -1,6 +1,15 @@
-.tools {
+.tools, .store {
   position: fixed;
   right: 20px;
   top: 50%;
   margin-top: -40px;
+  img {
+    height: 20px;
+    width: 20px;
+  }
+}
+
+.store {
+  left: 20px;
+  right: auto;
 }
