--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,6 +1,5 @@
 <div class="container">
-  <h1 class="border-left">
-    <a name="info"></a>{{ "NAV-NEWS" | translate }}</h1>
+  <h1 class="border-left"><a name="info"></a>{{ "NAV-NEWS" | translate }}</h1>
   <div class="row info">
     <div class="col-12">
       <table class="table table-hover">
@@ -14,6 +13,23 @@
           </tr>
         </tbody>
       </table>
+    </div>
+    <div class="col-12 text-right">
+      <ul class="pagination justify-content-right">
+        <li class="page-item">
+          <a class="page-link" href="#" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+          </a>
+        </li>
+        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item">
+          <a class="page-link" href="#" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+          </a>
+        </li>
+      </ul>
     </div>
   </div>
 </div>
