--- a/src/app/certificate/certificate.component.html
+++ b/src/app/certificate/certificate.component.html
@@ -1,3 +1,15 @@
-<p>
-  certificate works!
-</p>
+<div class="container">
+  <h1 class="border-left">
+    <a name="news"></a>{{ "NAV-CERTIFICATE" | translate }}
+  </h1>
+  <div class="row">
+    <div class="col-12">
+      <div class="card" *ngFor="let item of certificates; let i = index">
+        <img src="{{ item.url }}" class="card-img-top" alt="{{ item.title }}" />
+        <div class="card-body">
+          <h5 class="card-title text-center">{{ item.title }}</h5>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
