--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
   <h1 class="border-left">
     <a name="intro"></a>{{ "NAV-INTRO" | translate }}</h1>
   <div class="row intro">
@@ -11,7 +11,7 @@
       </p>
     </div>
   </div>
-</div>
+</div> -->
 
 <div class="container">
   <h1 class="border-left">
