--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,3 +1,5 @@
+@import "../app.component.mobile";
+
 nav {
   fa-icon {
     display: inline-block;
@@ -10,5 +12,5 @@ nav {
 
 .navbar-brand {
   font-size: 2rem;
-  font-weight: bolder;
+  font-weight: bolder;  
 }
