--- a/src/app/factory/factory.component.html
+++ b/src/app/factory/factory.component.html
@@ -3,8 +3,8 @@
     <a name="news"></a>{{ "NAV-FACTORY" | translate }}
   </h1>
   <div class="row">
-    <div class="col-12">
-      <div class="card" *ngFor="let item of factories; let i = index">
+    <div class="col-md-6 col-sm-12" *ngFor="let item of factories; let i = index">
+      <div class="card">
         <img src="{{ item.url }}" class="card-img-top" alt="{{ item.title }}" />
         <div class="card-body">
           <h5 class="card-title text-center">{{ item.title }}</h5>
@@ -12,4 +12,5 @@
       </div>
     </div>
   </div>
+  <hr />
 </div>
