enabled for github page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,32 +11,32 @@
           >
         </li>
         <li class="nav-item" [ngClass]="{'active': url === 'intro'}">
-          <a class="nav-link btn-lg" href="/intro">{{
+          <a class="nav-link btn-lg" href="{{hash}}/intro">{{
             "NAV-INTRO" | translate
           }}</a>
         </li>
         <li class="nav-item" [ngClass]="{'active': url === 'news'}">
-          <a class="nav-link btn-lg" href="/news">{{
+          <a class="nav-link btn-lg" href="{{hash}}/news">{{
             "NAV-NEWS" | translate
           }}</a>
         </li>
         <li class="nav-item" [ngClass]="{'active': url === 'product'}">
-          <a class="nav-link btn-lg" href="/product">{{
+          <a class="nav-link btn-lg" href="{{hash}}/product">{{
             "NAV-PRODUCTS" | translate
           }}</a>
         </li>
         <li class="nav-item" [ngClass]="{'active': url === 'factory'}">
-          <a class="nav-link btn-lg" href="/factory">{{
+          <a class="nav-link btn-lg" href="{{hash}}/factory">{{
             "NAV-FACTORY" | translate
           }}</a>
         </li>
         <li class="nav-item" [ngClass]="{'active': url === 'certificate'}">
-          <a class="nav-link btn-lg" href="/certificate">{{
+          <a class="nav-link btn-lg" href="{{hash}}/certificate">{{
             "NAV-CERTIFICATE" | translate
           }}</a>
         </li>
         <li class="nav-item" [ngClass]="{'active': url === 'contact'}">
-          <a class="nav-link btn-lg" href="/contact">{{
+          <a class="nav-link btn-lg" href="{{hash}}/contact">{{
             "NAV-CONTACT" | translate
           }}</a>
         </li>
