--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -17,7 +17,7 @@
     <div class="col-12 text-right">
       <ul class="pagination justify-content-right">
         <li class="page-item" [ngClass]="{ disabled: page == 1 }">
-          <a class="page-link" href="/news/page/1" aria-label="Previous">
+          <a class="page-link" href="{{hash}}/news/page/1" aria-label="Previous">
             <span aria-hidden="true">&laquo;</span>
           </a>
         </li>
@@ -26,7 +26,7 @@
           class="page-item"
           *ngIf="page - 4 > total - columns && page - 4 >= 1"
         >
-          <a class="page-link" href="/news/page/{{ page - 4 }}">{{
+          <a class="page-link" href="{{hash}}/news/page/{{ page - 4 }}">{{
             page - 4
           }}</a>
         </li>
@@ -34,45 +34,45 @@
           class="page-item"
           *ngIf="page - 3 > total - columns && page - 3 >= 1"
         >
-          <a class="page-link" href="/news/page/{{ page - 3 }}">{{
+          <a class="page-link" href="{{hash}}/news/page/{{ page - 3 }}">{{
             page - 3
           }}</a>
         </li>
         <li class="page-item" *ngIf="page - 2 >= 1">
-          <a class="page-link" href="/news/page/{{ page - 2 }}">{{
+          <a class="page-link" href="{{hash}}/news/page/{{ page - 2 }}">{{
             page - 2
           }}</a>
         </li>
         <li class="page-item" *ngIf="page - 1 >= 1">
-          <a class="page-link" href="/news/page/{{ page - 1 }}">{{
+          <a class="page-link" href="{{hash}}/news/page/{{ page - 1 }}">{{
             page - 1
           }}</a>
         </li>
         <li class="page-item disabled">
-          <a class="page-link" href="/news/page/{{ page }}">{{ page }}</a>
+          <a class="page-link" href="{{hash}}/news/page/{{ page }}">{{ page }}</a>
         </li>
         <li class="page-item" *ngIf="page + 1 <= total">
-          <a class="page-link" href="/news/page/{{ page + 1 }}">{{
+          <a class="page-link" href="{{hash}}/news/page/{{ page + 1 }}">{{
             page + 1
           }}</a>
         </li>
         <li class="page-item" *ngIf="page + 2 <= total">
-          <a class="page-link" href="/news/page/{{ page + 2 }}">{{
+          <a class="page-link" href="{{hash}}/news/page/{{ page + 2 }}">{{
             page + 2
           }}</a>
         </li>
         <li class="page-item" *ngIf="page + 3 <= total && page + 3 <= columns">
-          <a class="page-link" href="/news/page/{{ page + 3 }}">{{
+          <a class="page-link" href="{{hash}}/news/page/{{ page + 3 }}">{{
             page + 3
           }}</a>
         </li>
         <li class="page-item" *ngIf="page + 4 <= total && page + 4 <= columns">
-          <a class="page-link" href="/news/page/{{ page + 4 }}">{{
+          <a class="page-link" href="{{hash}}/news/page/{{ page + 4 }}">{{
             page + 4
           }}</a>
         </li>
         <li class="page-item" [ngClass]="{ disabled: page == total }">
-          <a class="page-link" href="/news/page/{{ total }}" aria-label="Next">
+          <a class="page-link" href="{{hash}}/news/page/{{ total }}" aria-label="Next">
             <span aria-hidden="true">&raquo;</span>
           </a>
         </li>
