--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -26,7 +26,7 @@
   </div>
 </div>
 
-<div class="container beian">
+<div class="container beian" *ngIf="beian">
   <div class="row">
     <div class="col-12 text-center">
       <img src="{{ beian.image }}" />
