--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -14,69 +14,16 @@
         </tbody>
       </table>
     </div>
-    <div class="col-12 text-right">
-      <ul class="pagination justify-content-right">
-        <li class="page-item" [ngClass]="{ disabled: page == 1 }">
-          <a class="page-link" href="{{hash}}/news/page/1" aria-label="Previous">
-            <span aria-hidden="true">&laquo;</span>
-          </a>
-        </li>
+    <app-paginator
 
-        <li
-          class="page-item"
-          *ngIf="page - 4 > total - columns && page - 4 >= 1"
-        >
-          <a class="page-link" href="{{hash}}/news/page/{{ page - 4 }}">{{
-            page - 4
-          }}</a>
-        </li>
-        <li
-          class="page-item"
-          *ngIf="page - 3 > total - columns && page - 3 >= 1"
-        >
-          <a class="page-link" href="{{hash}}/news/page/{{ page - 3 }}">{{
-            page - 3
-          }}</a>
-        </li>
-        <li class="page-item" *ngIf="page - 2 >= 1">
-          <a class="page-link" href="{{hash}}/news/page/{{ page - 2 }}">{{
-            page - 2
-          }}</a>
-        </li>
-        <li class="page-item" *ngIf="page - 1 >= 1">
-          <a class="page-link" href="{{hash}}/news/page/{{ page - 1 }}">{{
-            page - 1
-          }}</a>
-        </li>
-        <li class="page-item disabled">
-          <a class="page-link" href="{{hash}}/news/page/{{ page }}">{{ page }}</a>
-        </li>
-        <li class="page-item" *ngIf="page + 1 <= total">
-          <a class="page-link" href="{{hash}}/news/page/{{ page + 1 }}">{{
-            page + 1
-          }}</a>
-        </li>
-        <li class="page-item" *ngIf="page + 2 <= total">
-          <a class="page-link" href="{{hash}}/news/page/{{ page + 2 }}">{{
-            page + 2
-          }}</a>
-        </li>
-        <li class="page-item" *ngIf="page + 3 <= total && page + 3 <= columns">
-          <a class="page-link" href="{{hash}}/news/page/{{ page + 3 }}">{{
-            page + 3
-          }}</a>
-        </li>
-        <li class="page-item" *ngIf="page + 4 <= total && page + 4 <= columns">
-          <a class="page-link" href="{{hash}}/news/page/{{ page + 4 }}">{{
-            page + 4
-          }}</a>
-        </li>
-        <li class="page-item" [ngClass]="{ disabled: page == total }">
-          <a class="page-link" href="{{hash}}/news/page/{{ total }}" aria-label="Next">
-            <span aria-hidden="true">&raquo;</span>
-          </a>
-        </li>
-      </ul>
-    </div>
+    url = "/news/page/"
+    hash = "{{hash}}"
+    total = {{total}}
+    columns = {{columns}}
+    page = {{page}}
+    >
+
+    </app-paginator
+    >
   </div>
 </div>
