enabled pagination for factory

--- a/src/app/factory/factory.component.html
+++ b/src/app/factory/factory.component.html
@@ -11,6 +11,14 @@
         </div>
       </div>
     </div>
+    <app-paginator
+    url="/factory/page/"
+    hash="{{ hash }}"
+    total="{{ total }}"
+    columns="{{ columns }}"
+    page="{{ page }}"
+  >
+  </app-paginator>
   </div>
   <hr />
 </div>
