--- a/src/app/factory/factory.component.html
+++ b/src/app/factory/factory.component.html
@@ -17,6 +17,8 @@
     total="{{ total }}"
     columns="{{ columns }}"
     page="{{ page }}"
+    *ngIf = "total > 1"
+
   >
   </app-paginator>
   </div>
