--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -21,6 +21,7 @@
         total="{{ total }}"
         columns="{{ columns }}"
         page="{{ page }}"
+        *ngIf = "total > 1"
       >
       </app-paginator>
     </div>
