enabled home data fetching

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -46,7 +46,7 @@
     <div class="carousel-inner">
       <div
         class="carousel-item production-item"
-        *ngFor="let item of productions; let i = index"
+        *ngFor="let item of products; let i = index"
         [ngClass]="{ active: i == 0 }"
       >
         <img class="d-block w-100" src="{{ item.image }}"/>
