--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -6,8 +6,8 @@
     text-align: center;
     color: #dc3545;
   }
-  img {
-    width: 100%;
-    // height: 300px;
-  }
+}
+
+.w-100 {
+  height: 350px;
 }
