--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,6 +20,7 @@
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="btn btn-link btn-sm text-muted"
+          (click)="setCurrentHomePage()"
             >
             <fa-icon [icon]="faHome"></fa-icon
             >{{ "NAV-FRONTPAGE" | translate }}</a
